--- a/public/index.html
+++ b/public/index.html
@@ -92,7 +92,7 @@
                     entirely in your browser.</p>
 
                 <a href="https://github.com/phizlip/mctags" target="_blank" class="github-link">GitHub</a>
-                <p class="text-sm text-muted" style="margin-top: 1rem;">Layout inspired by <a href="https://mcsrc.dev"
+                <p class="text-sm text-muted" style="margin-top: 1rem;">Inspired by <a href="https://mcsrc.dev"
                         target="_blank" class="text-link">mcsrc.dev</a></p>
 
                 <div class="about-key">
