--- a/public/index.html
+++ b/public/index.html
@@ -147,6 +147,19 @@
                             </div>
                             <span>Close Tab</span>
                         </li>
+
+                        <li>
+                            <div class="about-shortcuts-keys">
+                                <kbd class="kbd-modifier">Option</kbd> + <kbd>E</kbd>
+                            </div>
+                            <span>Toggle Sidebar</span>
+                        </li>
+                        <li>
+                            <div class="about-shortcuts-keys">
+                                <kbd class="kbd-modifier">Option</kbd> + <kbd>R</kbd>
+                            </div>
+                            <span>Reset View</span>
+                        </li>
                         <li>
                             <div class="about-shortcuts-keys">
                                 <kbd>Esc</kbd>
@@ -160,30 +173,40 @@
     </div>
 
     <header class="top-bar">
-        <div class="version-controls">
-            <select id="type-select" class="version-select">
-                <option value="all" selected>All Types</option>
-                <option value="release">Releases</option>
-                <option value="snapshot">Snapshots</option>
-            </select>
-            <select id="version-select" class="version-select">
-                <option>Loading...</option>
-            </select>
-        </div>
-        <div class="navbar-icons">
-            <button id="refresh-btn" class="icon-btn" title="Reset View">
+        <div style="display: flex; align-items: center; gap: 0.5rem;">
+            <button id="sidebar-toggle-btn" class="icon-btn" title="Toggle Sidebar"
+                style="margin-right: 0.5rem; width: 28px; height: 28px;">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
                     <path
-                        d="M1.705 8.005a.75.75 0 0 1 .834.656 5.5 5.5 0 0 0 9.592 2.97l-1.204-1.204a.25.25 0 0 1 .177-.427h3.646a.25.25 0 0 1 .25.25v3.646a.25.25 0 0 1-.427.177l-1.38-1.38A7.002 7.002 0 0 1 1.05 8.84a.75.75 0 0 1 .656-.834ZM8 2.5a5.487 5.487 0 0 0-4.131 1.869l1.204 1.204A.25.25 0 0 1 4.896 6H1.25A.25.25 0 0 1 1 5.75V2.104a.25.25 0 0 1 .427-.177l1.38 1.38A7.002 7.002 0 0 1 14.95 7.16a.75.75 0 0 1-1.49.178A5.5 5.5 0 0 0 8 2.5Z" />
-                </svg>
-            </button>
-            <button id="info-btn" class="icon-btn" title="About">
-                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+                        d="m4.177 7.823 2.396-2.396A.25.25 0 0 1 7 5.604v4.792a.25.25 0 0 1-.427.177L4.177 8.177a.25.25 0 0 1 0-.354" />
                     <path
-                        d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13ZM6.5 7.75A.75.75 0 0 1 7.25 7h1a.75.75 0 0 1 .75.75v2.75h.25a.75.75 0 0 1 0 1.5h-2a.75.75 0 0 1 0-1.5h.25v-2h-.25a.75.75 0 0 1-.75-.75ZM8 6a1 1 0 1 1 0-2 1 1 0 0 1 0 2Z" />
+                        d="M0 1.75C0 .784.784 0 1.75 0h12.5C15.216 0 16 .784 16 1.75v12.5A1.75 1.75 0 0 1 14.25 16H1.75A1.75 1.75 0 0 1 0 14.25Zm1.75-.25a.25.25 0 0 0-.25.25v12.5c0 .138.112.25.25.25H9.5v-13Zm12.5 13a.25.25 0 0 0 .25-.25V1.75a.25.25 0 0 0-.25-.25H11v13Z" />
                 </svg>
             </button>
-        </div>
+            <div class="version-controls">
+                <select id="type-select" class="version-select">
+                    <option value="all" selected>All Types</option>
+                    <option value="release">Releases</option>
+                    <option value="snapshot">Snapshots</option>
+                </select>
+                <select id="version-select" class="version-select">
+                    <option>Loading...</option>
+                </select>
+            </div>
+            <div class="navbar-icons">
+                <button id="refresh-btn" class="icon-btn" title="Reset View">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+                        <path
+                            d="M1.705 8.005a.75.75 0 0 1 .834.656 5.5 5.5 0 0 0 9.592 2.97l-1.204-1.204a.25.25 0 0 1 .177-.427h3.646a.25.25 0 0 1 .25.25v3.646a.25.25 0 0 1-.427.177l-1.38-1.38A7.002 7.002 0 0 1 1.05 8.84a.75.75 0 0 1 .656-.834ZM8 2.5a5.487 5.487 0 0 0-4.131 1.869l1.204 1.204A.25.25 0 0 1 4.896 6H1.25A.25.25 0 0 1 1 5.75V2.104a.25.25 0 0 1 .427-.177l1.38 1.38A7.002 7.002 0 0 1 14.95 7.16a.75.75 0 0 1-1.49.178A5.5 5.5 0 0 0 8 2.5Z" />
+                    </svg>
+                </button>
+                <button id="info-btn" class="icon-btn" title="About">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+                        <path
+                            d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13ZM6.5 7.75A.75.75 0 0 1 7.25 7h1a.75.75 0 0 1 .75.75v2.75h.25a.75.75 0 0 1 0 1.5h-2a.75.75 0 0 1 0-1.5h.25v-2h-.25a.75.75 0 0 1-.75-.75ZM8 6a1 1 0 1 1 0-2 1 1 0 0 1 0 2Z" />
+                    </svg>
+                </button>
+            </div>
     </header>
 
     <div id="app" class="app-container">
