docs: add link to Minecraft Wiki for Tag definition

--- a/public/index.html
+++ b/public/index.html
@@ -87,7 +87,8 @@
                 </button>
             </div>
             <div class="about-body">
-                <p>mctags.dev is designed to visualize Minecraft tag relationships using <a
+                <p>mctags.dev is designed to visualize <a href="https://minecraft.wiki/w/Tag_(Java_Edition)"
+                        target="_blank" class="text-link">Minecraft tag</a> relationships using <a
                         href="https://js.cytoscape.org/" target="_blank" class="text-link">Cytoscape.js</a>. It runs
                     entirely in your browser.</p>
 
