feat: add additional shortcuts and auto save grid settings

--- a/public/index.html
+++ b/public/index.html
@@ -99,8 +99,6 @@
                 </div>
                 <div style="display: flex; gap: 0.5rem; justify-content: flex-end;">
                     <button id="settings-reset-btn" style="width: auto; padding: 0.5rem 1rem;">Reset to Default</button>
-                    <button id="settings-save-btn"
-                        style="width: auto; padding: 0.5rem 1rem; background: var(--text-primary); color: #18181b;">Save</button>
                 </div>
             </div>
         </div>
@@ -171,7 +169,7 @@
                         </li>
                         <li>
                             <div class="about-shortcuts-keys">
-                                <kbd class="kbd-modifier">Option</kbd> + <kbd>F</kbd>
+                                <kbd class="kbd-ctrl">Ctrl</kbd> / <kbd>Alt</kbd> + <kbd>F</kbd>
                             </div>
                             <span>Focus Search</span>
                         </li>
@@ -184,7 +182,7 @@
 
                         <li>
                             <div class="about-shortcuts-keys">
-                                <kbd class="kbd-modifier">Option</kbd> + <kbd>E</kbd>
+                                <kbd class="kbd-ctrl">Ctrl</kbd> / <kbd>Alt</kbd> + <kbd>E</kbd>
                             </div>
                             <span>Toggle Sidebar</span>
                         </li>
@@ -196,9 +194,9 @@
                         </li>
                         <li>
                             <div class="about-shortcuts-keys">
-                                <kbd>Esc</kbd>
+                                <kbd>-</kbd> / <kbd>+</kbd>
                             </div>
-                            <span>Close Modals</span>
+                            <span>Adjust Spacing</span>
                         </li>
                     </ul>
                 </div>
