feat: migrate to single key shortcuts

--- a/public/index.html
+++ b/public/index.html
@@ -163,32 +163,32 @@
                     <ul>
                         <li>
                             <div class="about-shortcuts-keys">
-                                <kbd class="kbd-modifier">Option</kbd> + <kbd>1</kbd> - <kbd>0</kbd>
+                                <kbd>1</kbd> - <kbd>0</kbd>
                             </div>
                             <span>Switch Tabs</span>
                         </li>
                         <li>
                             <div class="about-shortcuts-keys">
-                                <kbd class="kbd-ctrl">Ctrl</kbd> / <kbd>Alt</kbd> + <kbd>F</kbd>
+                                <kbd>F</kbd>
                             </div>
                             <span>Focus Search</span>
                         </li>
                         <li>
                             <div class="about-shortcuts-keys">
-                                <kbd class="kbd-modifier">Option</kbd> + <kbd>W</kbd>
+                                <kbd>W</kbd>
                             </div>
                             <span>Close Tab</span>
                         </li>
 
                         <li>
                             <div class="about-shortcuts-keys">
-                                <kbd class="kbd-ctrl">Ctrl</kbd> / <kbd>Alt</kbd> + <kbd>E</kbd>
+                                <kbd>E</kbd>
                             </div>
                             <span>Toggle Sidebar</span>
                         </li>
                         <li>
                             <div class="about-shortcuts-keys">
-                                <kbd class="kbd-modifier">Option</kbd> + <kbd>R</kbd>
+                                <kbd>R</kbd>
                             </div>
                             <span>Reset View</span>
                         </li>
