--- a/public/index.html
+++ b/public/index.html
@@ -104,6 +104,47 @@
         </div>
     </div>
 
+    <div id="datapack-modal" class="overlay hidden"
+        style="background: rgba(24, 24, 27, 0.4); backdrop-filter: blur(2px);">
+        <div class="card settings-card">
+            <div class="settings-header-row"
+                style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 1rem;">
+                <h2 class="settings-title" style="margin: 0; font-size: 1.1rem;">Data Packs</h2>
+                <button class="about-close-btn" id="datapack-close-btn">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
+                        <path
+                            d="M3.72 3.72a.75.75 0 0 1 1.06 0L8 6.94l3.22-3.22a.749.749 0 0 1 1.275.326.749.749 0 0 1-.215.734L9.06 8l3.22 3.22a.749.749 0 0 1-.326 1.275.749.749 0 0 1-.734-.215L8 9.06l-3.22 3.22a.751.751 0 0 1-1.042-.018.751.751 0 0 1-.018-1.042L6.94 8 3.72 4.78a.75.75 0 0 1 0-1.06Z">
+                        </path>
+                    </svg>
+                </button>
+            </div>
+            <div class="settings-body" id="datapack-modal-body" style="text-align: left;">
+                <p style="font-size: 0.875rem; color: var(--text-secondary); margin-bottom: 1.5rem;">
+                    Upload custom data packs to visualize their tags alongside vanilla Minecraft data.
+                </p>
+                <input type="file" id="datapack-file-input" accept=".zip" style="display: none;" multiple>
+                <div id="datapack-drop-zone" class="datapack-drop-zone">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 16 16"
+                        fill="currentColor">
+                        <path
+                            d="M2.75 14A1.75 1.75 0 0 1 1 12.25v-2.5a.75.75 0 0 1 1.5 0v2.5c0 .138.112.25.25.25h10.5a.25.25 0 0 0 .25-.25v-2.5a.75.75 0 0 1 1.5 0v2.5A1.75 1.75 0 0 1 13.25 14Z">
+                        </path>
+                        <path
+                            d="M11.78 4.72a.749.749 0 1 1-1.06 1.06L8.75 3.811V9.5a.75.75 0 0 1-1.5 0V3.811L5.28 5.78a.749.749 0 1 1-1.06-1.06l3.25-3.25a.749.749 0 0 1 1.06 0l3.25 3.25Z">
+                        </path>
+                    </svg>
+                    <div class="drop-zone-text">
+                        <strong>Drop data pack here or click to browse</strong>
+                        <span>Supports .zip files</span>
+                    </div>
+                </div>
+                <div id="datapack-list" class="datapack-list">
+                    <!-- Data packs will be populated here -->
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div id="about-modal" class="overlay hidden" style="background: rgba(24, 24, 27, 0.4); backdrop-filter: blur(2px);">
         <div class="card about-card">
             <div class="about-header-row">
@@ -239,6 +280,13 @@
                 </select>
             </div>
             <div class="navbar-icons">
+                <button id="datapack-btn" class="icon-btn" title="Data Packs">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" width="16" height="16">
+                        <path
+                            d="M2 1.75C2 .784 2.784 0 3.75 0h6.586c.464 0 .909.184 1.237.513l2.914 2.914c.329.328.513.773.513 1.237v9.586A1.75 1.75 0 0 1 13.25 16h-9.5A1.75 1.75 0 0 1 2 14.25Zm1.75-.25a.25.25 0 0 0-.25.25v12.5c0 .138.112.25.25.25h9.5a.25.25 0 0 0 .25-.25V4.664a.25.25 0 0 0-.073-.177l-2.914-2.914a.25.25 0 0 0-.177-.073Zm4.48 3.758a.75.75 0 0 1 .755.745l.01 1.497h1.497a.75.75 0 0 1 0 1.5H9v1.507a.75.75 0 0 1-1.5 0V9.005l-1.502.01a.75.75 0 0 1-.01-1.5l1.507-.01-.01-1.492a.75.75 0 0 1 .745-.755Z">
+                        </path>
+                    </svg>
+                </button>
                 <button id="refresh-btn" class="icon-btn" title="Reset View">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 16 16">
                         <path
@@ -286,6 +334,7 @@
                     <button id="tab-json" class="detail-tab">JSON</button>
                 </div>
 
+                <div id="detail-replaced-warning" class="hidden"></div>
                 <div id="detail-view-relations">
                     <div class="detail-section">
                         <h4>Contains (<span id="detail-child-count">0</span>)</h4>
